[package]
name = "niagara"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
edition = "2018"

[dependencies]
gdk-pixbuf = "*"
glib = "*"
gtk = { version = "0.8.0", features = ["v3_24"] }
gio = "*"
rscam = { version = "0.5", features = ["no_wrapper"] }
tokio = { version = "0.2", features = ["full"] }
